# JJFrameSequence

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jj/framesequence/: FrameSequenceTest.java  SamplesList.java
app/src/main/res/values/: strings.xml  themes.xml
framesequence/: CMakeLists.txt  build.gradle
framesequence/src/main/: AndroidManifest.xml
framesequence/src/main/cpp/framesequence/: FrameSequenceJNI.cpp  FrameSequence_webp.cpp  FrameSequence_webp.h
framesequence/src/main/cpp/webp/dsp/: cost.c  cpu.c  enc.c  enc_sse2.c  lossless_enc.c  lossless_enc_sse2.c  lossless_enc_sse41.c  rescaler.c  ssim.c  upsampling_msa.c
framesequence/src/main/cpp/webp/enc/: alpha_enc.c  analysis_enc.c  backward_references_enc.c  frame_enc.c  histogram_enc.c  picture_csp_enc.c  picture_rescale_enc.c  picture_tools_enc.c  predictor_enc.c  quant_enc.c  syntax_enc.c  vp8l_enc.c  webp_enc.c
framesequence/src/main/cpp/webp/utils/: bit_writer_utils.c  huffman_encode_utils.c
framesequence/src/main/java/com/llk/framesequence/: FrameSequence.java  FrameSequenceDrawable.java
gradle/wrapper/: gradle-wrapper.properties
